--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/font": "^14.2.5",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
